added 404 page and updated  pages content

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="#" />
+    <link rel="icon" type="image/svg+xml" href="/images/erick.PNG" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio v2</title>
+    <title>Erick Mucira</title>
   </head>
   <body>
     <div id="root"></div>
